# TROYER_bt2597_PA1

./: Makefile  README.md  design.md  pyproject.toml  test.txt
src/: ChatApp.py  client.py  log.py  main.py  server.py
