[tool.poetry]
name = "troyer_bt2597_pa1"
version = "0.1.0"
description = "UDP Chat Server & Client"
authors = ["Baily Troyer bt2597@columbia.edu"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
